deployment/k8s-deployment/app.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: app
  name: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      volumes:
      - name: config-volume
        configMap:
          name: app-config
      - name: staticfiles
        hostPath:
          path: /data/staticfiles
          type: Directory
      - name: mediafiles
        hostPath:
          path: /data/mediafiles
          type: Directory
      - name: redisdata
        hostPath:
          path: /data/redisdata
          type: Directory
      containers:
      - name: node-codewithdan
        image: docker.io/gbournique/myportfolio_app:latest
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: staticfiles
          mountPath: /code/staticfiles/
          readOnly: false
        - name: mediafiles
          mountPath: /code/mediafiles/
          readOnly: false
        - name: redisdata
          mountPath: /data
          readOnly: false
        - name: config-volume
          mountPath: /code/entrypoints/
          readOnly: false
        args:
        - bin/sh
        - -c
        - /code/entrypoints/run_server.sh
        ports:
        - containerPort: 8080
        resources: {}
        livenessProbe:
          exec:
            command:
            - bin/sh
            - -c
            - curl -f -s -S http://localhost:8080 || exit 1
          initialDelaySeconds: 20
          periodSeconds: 30
          failureThreshold: 5    
        
---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: worker
  name: worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      volumes:
      - name: config-volume
        configMap:
          name: app-config
      - name: staticfiles
        hostPath:
          path: /data/staticfiles
          type: Directory
      - name: mediafiles
        hostPath:
          path: /data/mediafiles
          type: Directory
      - name: redisdata
        hostPath:
          path: /data/redisdata
          type: Directory
      containers:
      - name: node-codewithdan
        image: docker.io/gbournique/myportfolio_app:latest
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: staticfiles
          mountPath: /code/staticfiles/
          readOnly: false
        - name: mediafiles
          mountPath: /code/mediafiles/
          readOnly: false
        - name: redisdata
          mountPath: /data
          readOnly: false
        - name: config-volume
          mountPath: /code/entrypoints/
          readOnly: false
        args:
        - bin/sh
        - -c
        - /code/entrypoints/run_celery.sh
        ports:
        - containerPort: 8080
        resources: {}
        livenessProbe:
          exec:
            command:
            - bin/sh
            - -c
            - ps | grep celery || exit 1
          initialDelaySeconds: 20
          periodSeconds: 30
          failureThreshold: 5

---

apiVersion: v1
kind: Service
metadata:
  name: app
  labels:
    app: app
spec:
  selector:
    app: app
  ports:
  - name: "8080"
    port: 8080
    targetPort: 8080

---
