deployment/k8s-deployment/nginx.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx
  name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      volumes:
        - name: staticfiles
          hostPath:
            path: /data/staticfiles
            type: Directory
        - name: mediafiles
          hostPath:
            path: /data/mediafiles
            type: Directory
        - name: certs
          hostPath:
            path: /data/certs
            type: Directory
        - name: config-volume
          configMap:
            name: nginx-config
      containers:
      - image: nginx:1.17-alpine
        imagePullPolicy: IfNotPresent
        name: nginx
        ports:
        - containerPort: 80
        - containerPort: 443
        volumeMounts:
        - name: staticfiles
          mountPath: /www/staticfiles/
          readOnly: false
        - name: mediafiles
          mountPath: /www/mediafiles/
          readOnly: false
        - name: certs
          mountPath: /etc/nginx/certs
          readOnly: true
        - name: config-volume
          mountPath: /etc/nginx/conf.d
        resources: {}
        readinessProbe:
          httpGet:
            path: /
            port: 443
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          exec:
            command:
            - bin/sh
            - -c
            - stat /etc/nginx/conf.d/nginx.conf && nginx -t || exit 1
          initialDelaySeconds: 20
          periodSeconds: 30

---

apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  selector:
    app: nginx
  type: NodePort
  ports:
  - name: "443"
    port: 443
    nodePort: 30001
