deployment/k8s-deployment/postgres.yml

apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: postgres
  name: postgres
spec:
  serviceName: postgres
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      volumes:
      - name: postgres-volume
        persistentVolumeClaim:
          claimName: postgres-pvc
      - name: config-volume
        configMap:
          name: postgres-config
      - name: setup-volume
        configMap:
          name: postgres-setup
      containers:
      - env:
        - name: POSTGRES_DB
          valueFrom:
            configMapKeyRef:
              key: POSTGRES_DB
              name: postgres-env
        - name: POSTGRES_PASSWORD
          valueFrom:
            configMapKeyRef:
              key: POSTGRES_PASSWORD
              name: postgres-env
        - name: POSTGRES_USER
          valueFrom:
            configMapKeyRef:
              key: POSTGRES_USER
              name: postgres-env
        - name: POSTGRES_INITDB_ARGS
          valueFrom:
            configMapKeyRef:
              key: POSTGRES_INITDB_ARGS
              name: postgres-env
        image: postgres:12-alpine
        imagePullPolicy: IfNotPresent
        name: postgres
        ports:
        - containerPort: 5432
        resources: {}   
        volumeMounts:
        - name: setup-volume
          mountPath: /docker-entrypoint-initdb.d/
          readOnly: false
        - name: config-volume
          mountPath: /etc/postgres/postgres.conf
          readOnly: true
        - mountPath: "/var/lib/postgresql/data"
          name: postgres-volume
        livenessProbe:
          exec:
            command:
            - pg_isready -U postgre
          initialDelaySeconds: 0
          periodSeconds: 10
          failureThreshold: 10

---

apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    app: postgres
spec:
  selector:
    app: postgres
  ports:
  - name: "5432"
    port: 5432
    targetPort: 5432
